--- a/redirect/Scuola/Informatica/Calculator/pom.xml
+++ b/redirect/Scuola/Informatica/Calculator/pom.xml
@@ -14,7 +14,11 @@
     <junit.version>5.8.2</junit.version>      </properties>
 
   <dependencies>
-
+    <dependency>
+      <groupId>org.openjdk.nashorn</groupId>
+      <artifactId>nashorn-core</artifactId>
+      <version>15.4</version>
+    </dependency>
     <dependency>
       <groupId>org.openjfx</groupId>
       <artifactId>javafx-controls</artifactId>
