--- a/redirect/Scuola/TPSI/openmeteo/package.json
+++ b/redirect/Scuola/TPSI/openmeteo/package.json
@@ -10,8 +10,11 @@
     "@types/node": "^16.18.50",
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
+    "framer-motion": "^10.16.4",
+    "leaflet": "^1.9.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
     "sass": "^1.67.0",
     "typescript": "^4.9.5",
@@ -42,6 +45,7 @@
     ]
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.4",
     "tailwindcss": "^3.3.3"
   }
 }
