--- a/tpsit/openmeteo/package.json
+++ b/tpsit/openmeteo/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
     "react-scripts": "5.0.1",
+    "recharts": "^2.8.0",
     "sass": "^1.67.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
